--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -1,5 +1,6 @@
 server {
   listen 80;
+  index index.html;
 
   # Запросы по адресам /api/... перенаправляй в контейнер backend
   location /api/ {
@@ -18,6 +19,6 @@ server {
 
   location / {
     alias /staticfiles/;
-    index index.html;
+    try_files $uri $uri/ /index.html;
   }
 }
